--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,11 +1,5 @@
-<link
-  href="https://fonts.googleapis.com/css2?family=Space+Mono&display=optional"
-  rel="stylesheet"
-/>
-<link
-  href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=optional"
-  rel="stylesheet"
-/>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="true" />
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" />
 
 <style>
   body {
