--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,8 @@
-<link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="true" />
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap"
+  rel="stylesheet"
+/>
 
 <style>
   body {
