add query builder

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -18,7 +18,7 @@
   }
 
   :root {
-    --font-serif: 'grotesque';
-    --font-sans: 'JetBrains Mono';
+    --font-primary: 'grotesque';
+    --font-secondary: 'JetBrains Mono';
   }
 </style>
